--- a/Module01/index.html
+++ b/Module01/index.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html ng-app="LunchCheck">
+  <head>
+    <meta charset="utf-8">
+    <title>Lunch Checker</title>
+    <script src="angular.min.js"></script>
+    <script src="app.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+ </head>
+  <body>
+    <div class="container" ng-controller="LunchCheckController">
+      <h1>Lunch Checker</h1>
+      <div class="form-group">
+          <input id="lunch-menu" type="text" placeholder="list comma separated dishes you usually have for lunch" class="form-control" ng-model="dishes">
+      </div>
 
+      <div class="form-group">
+          <button class="btn btn-default" ng-click="checkItems()">Check If Too Much</button>
+      </div>
+
+      <div>{{message}}</div><br><br>
+
+      <div>This app do NOT consider empty item, i.e., , as an item towards to the count. </div>
+
+  </div>
+  </body>
+</html>
